# FHSWF-MLOps

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  env_empty  nginx.conf  requirements.txt
.github/workflows/: build_and_deploy.yml  deploy.yml  docker-backend.yml  docker.yml  docker_build_test.yml  pytest.yml  pytest_workflow.yml  test_backend.yml
backend/: .dockerignore  Dockerfile  config.py  pyproject.toml  settings.toml  settings.yaml
backend/backend/mlruns/0/: meta.yaml
backend/backend/mlruns/975975188029838506/: meta.yaml
backend/models/income/: data_preparation.py  data_visualisation.py  run_income_experiments.py
backend/models/income/random_forest/: pipeline.py  pipelinetraining.py
backend/models/income/xgboost/: pipeline.py  pipelinetraining.py
backend/models/models/income/: data_preparation.py  run_income_experiments.py
backend/models/models/income/random_forest/: pipeline.py  pipelinetraining.py
backend/models/models/income/xgboost/: pipelinetraining.py
backend/notebooks/: 1503_Datenvorbereitung.ipynb  Data_Vis_Poc.ipynb  MlFlow_Poc.ipynb  fastapi_test.py  temp.py  training.ipynb
backend/src/: api.py  config.py  main.py  schemas.py  service.py
backend/src/backend/: api.py  main.py
backend/src/training/: dataset.py  datavisualisation.py  trainer.py
backend/src/training/models/: __init__.py  base.py  factory.py  randomforest.py  xgboost.py
backend/tests/: test_a.py  test_api.py  test_dataset.py  test_trainer.py
docs/: Dockerfile  MLOps Projekt 2.html  MLOps Projekt 2.ipynb  MLOps Projekt.html  MLOps Projekt.ipynb  pyproject.toml
docs/source/: conf.py  deployment.md  docs.md  index.md  live-mode.md  project-setup.md  setup.md  start.md  training.md
docs/source/notebooks/: data_analysis.ipynb
frontend/: Dockerfile  pyproject.toml  settings.yaml
frontend/src/: config.py  main.py
frontend/src/form/: __init__.py  education_work.py  financial.py  personal.py
training_server/: .dockerignore  Dockerfile  pyproject.toml  settings.yaml
training_server/datasets/: __init__.py  adult_income_data.py  factory.py
training_server/notebooks/: training.ipynb
training_server/src/: config.py  main.py  trainer.py
training_server/src/datasets/: __init__.py  adult_income_data.py  base.py  factory.py
training_server/src/models/: __init__.py  base.py  factory.py  rf_classifier.py  xgboost_classifier.py
