[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi >=0.115.8",
    "uvicorn >=0.34.0",
    "pydantic >=2.10.6",
    "mlflow >=2.20.2",
    "loguru >=0.7.3",
    "pandas >=2.2.3",
    "numpy >=1.24.0",
    "scikit-learn >=1.6.1",
    "xgboost >=2.1.4",
    "optuna >=4.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.3.4",
    "jupyter >=1.0.0",
    "matplotlib >=3.7.0",
    "seaborn >=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = [
    "--import-mode=importlib",
    "--pyargs",
]

testpaths = [
    "tests",
]
