[project]
name = "frontend"
version = "0.1.0"
requires-python = ">=3.11"
description = "MLOps Project Frontend"
dependencies = [
    "streamlit >=1.43.2",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
